fix : fixed a bug in the dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,8 @@
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
+    --chart-grid: #f3f4f6;
+    --chart-axis: #6b7280;
 
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
@@ -38,6 +40,8 @@
   .dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
+    --chart-grid: #1f2937;
+    --chart-axis: #4b5563;
 
     --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
